--- a/css/main.css
+++ b/css/main.css
@@ -278,7 +278,8 @@ section.success{
 /* seccion what we do*/
 
 ul.social-network {
-    list-style: none;
+  list-style: none;
+  width: 10%;
   display: inline;
   margin-left:0 !important;
   padding: 0;
@@ -286,4 +287,26 @@ ul.social-network {
 ul.social-network li {
   display: inline;
   margin: 0 5px;
+}
+
+.btn.btn-blk-2{
+    background: #4D5154;
+    color: #FFF;
+    border-radius: 0;
+    outline: 0;
+}
+
+.div-back-price-1 {
+  background: #FFF;
+  color: #34495E;
+  font-size: 20px;
+}
+
+.price {
+  background-color: #23C68B;
+  font-size: 20px;
+}
+
+.border-price {
+  border: 1px solid #23C68B;
 }
